# FazonEngine

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
Fazon/: Application.cpp  Application.h  CMakeLists.txt
Fazon/src/: Fazon.h
Fazon/src/Fazon/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  InputState.cpp  InputState.h  KeyCodes.cpp  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  Window.h  fzpch.h
Fazon/src/Fazon/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
Fazon/src/Fazon/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Fazon/src/Fazon/Networking/: Client.cpp  Client.h  Server.cpp  Server.h
Fazon/src/Fazon/Platform/OpenGL/: ImGuiOpenGLRenderer.h  ImGuiSDL3Renderer.cpp  ImguiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Fazon/src/Fazon/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Fazon/src/Fazon/Renderer/: Buffer.cpp  Buffer.h  RenderContext.cpp  RenderContext.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h
Fazon/tests/: CMakeLists.txt
Fazon/tests/src/: LogTests.cpp
Fazon/tests/src/Events/: ApplicationEventTests.cpp  KeyEventTests.cpp  MouseEventTests.cpp  WindowEventTests.cpp
Sandbox/: CMakeLists.txt
Sandbox/src/: Application.cpp  SandboxApp.cpp
Shaders/: comp.comp  triangle.frag  triangle.vert
cmake/: build_definitions.cmake  compiler_options.cmake  platform_detection.cmake  submodules.cmake
libs/ImGUI/: ImGui.lib
libs/SDL3/: SDL3.exp  SDL3.lib  SDL3_test.lib  SDL_uclibc.lib
libs/glad/: glad.lib
libs/glm/: glm.lib
